# geckoplotter-v2

./: .gitignore  README.md  app.py  csv_md.py  gene.py  plasmid_lib.md  requirements.txt
config/: settings.py
data_readers/: __init__.py  base_reader.py  chromatogram_reader.py  csv_reader.py  spectra_reader.py
lcms/: cdf_reader.py  lcms.py  lcms_plot.py  lcms_view.py  ms_plotter.py
models/: calibration.py  chromatogram.py
pdb/: aa_conversion.py  aa_properties.py  ai_analysis.py  app.py  cli.py  config.py  css_utils.py  distance_utils.py  dynamic_network.py  fetch_utils.py  file_io.py  geometry_utils.py  hbond_utils.py  logging_utils.py  md_analysis.py  network_analysis.py  palette_utils.py  parser.py  pocket_utils.py  pyproject.toml  residue_utils.py  sequence_analysis.py  visualization.py  viz_3d.py
pdb/tests/: test_core.py
resources/: user_guide.html
ui/: calibration_ui.py  custom_uploader.py  direct_parser.py  export_options.py  fonts_labels.py  peaks_view.py  plot.py  plot_interactions.py  plot_settings.py  samples_view.py  sidebar.py
utils/: color_utils.py  colourmaps.py  conversion.py  data_processing.py  file_upload_handler.py  file_utils.py  fix_csv_upload.py  lcms_csv_processor.py  peak_detection.py  toast.py
