\[tool.poetry]
name = "molecular-universe-explorer"
version = "0.1.0"
description = "A comprehensive browser-based molecular visualization and analysis platform"
authors = \["Your Name [you@example.com](mailto:you@example.com)"]
homepage = "[https://github.com/yourusername/molecular-universe-explorer](https://github.com/yourusername/molecular-universe-explorer)"
license = "MIT"

\[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21"
scipy = "^1.7"
pandas = "^1.3"
scikit-learn = "^1.0"
plotly = "^5.0"
streamlit = "^1.0"
networkx = "^2.6"
pytest = {version = "^7.0", optional = true}

\[tool.poetry.extras]
testing = \["pytest"]

\[build-system]
requires = \["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
